--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,14 @@ readme = "README.md"
 requires-python = ">=3.10.16"
 dependencies = [
     "google-generativeai>=0.8.5",
+    "imbalanced-learn>=0.13.0",
     "joblib>=1.5.1",
     "keras>=3.10.0",
     "matplotlib>=3.10.3",
     "numpy>=2.1.3",
     "pandas>=2.2.3",
     "plotly>=6.1.2",
+    "pywavelets>=1.8.0",
     "scikit-learn>=1.6.1",
     "streamlit>=1.45.1",
     "ta>=0.11.0",
